--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
     <p class="mt-5 mb-3 text-muted">&copy; Vidit Khandelwal<br><a href="https://cs.viditkhandelwal.com" class="link" target="_blank">cs.viditkhandelwal.com</a></p>
   </form>
 </main>
